Fix site title block visibility issues.
Fix #124

--- a/sources/stylesheets/layout/_header.scss
+++ b/sources/stylesheets/layout/_header.scss
@@ -75,8 +75,8 @@
       z-index: 55000;
       justify-content: flex-end;
       padding: 23px 40px;
-      background-color: $color-white;
-      transition: top .2s, right .2s;
+      background-color: transparent;
+      transition: top .2s, right .2s, background-color .2s;
 
       &::after {
         position: absolute;
@@ -107,7 +107,7 @@
       // scss-lint:disable NestingDepth
       .edy-checkout-button-visible & {
         top: 0;
-        transition: top 0s, right .2s;
+        transition: top 0s, right .2s, background-color .2s;
       }
       // scss-lint:enable NestingDepth
     }
@@ -115,11 +115,15 @@
 
     &.headroom--pinned {
       top: 0;
-      transition: top .2s, right .2s;
+      transition: top .2s, right .2s, background-color .2s;
     }
 
-    .headroom--not-top {
-      transition: top .2s, right .2s;
+    &.headroom--not-top {
+      transition: top .2s, right .2s, background-color .2s;
+
+      @include breakpoint($medium-up) {
+        background-color: $color-white;
+      }
 
       // scss-lint:disable NestingDepth
       &::after {
